# simple3

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_STYTLE_RUST.md  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  SECURITY.md  build.rs
.cargo/: config.toml
.github/: dependabot.yml
.github/prompts/: code-review.md
.github/workflows/: ci.yml  codeql.yml  compat-ceph.yml  compat-mint.yml  docker.yml  review.yml
bench/: run-warp.sh  setup.sh
benches/: storage_bench.rs
chaos/: disk-full.sh  kill-loop.sh
docker/ceph-s3-tests/: Dockerfile
docs/: backup.md  benchmark-minio.md  chaos-testing.md  grafana-dashboard.json  migration.md  production.md  rfc-replication.md  tls-proxy.md
proto/: simple3.proto
src/: grpc.rs  grpc_helpers.rs  lib.rs  limits.rs  main.rs  metrics_util.rs  s3impl.rs  s3impl_helpers.rs  storage.rs  types.rs
src/auth/: grpc_auth.rs  mod.rs  policy.rs  s3_access.rs  s3_auth.rs  types.rs
src/cli/: admin_auth.rs  compact.rs  config.rs  health.rs  keys.rs  metrics.rs  metrics_auth.rs  mod.rs  policy_cmd.rs  rate_limit.rs  request_id.rs  serve.rs  serve_admin.rs  serve_config.rs  serve_lifecycle.rs  serve_tests.rs  util.rs  verify.rs
src/cli/client/: cp.rs  grpc.rs  http.rs  ls.rs  mb.rs  mod.rs  presign.rs  progress.rs  rb.rs  rm.rs  sync_cmd.rs
src/storage/: compaction.rs  lifecycle.rs  migration.rs  mod.rs  multipart.rs  segment.rs  verify.rs  versioning.rs
test-scripts/: e2e-auth.sh  e2e-multiseg.sh  e2e-test.sh  generate-test-data.sh
tests/: chaos_test.rs  copy_object_test.rs  crash_recovery_test.rs  head_bucket_test.rs  lifecycle_test.rs  limits_test.rs  presign_test.rs  storage_test.rs  versioning_test.rs
tests/common/: mod.rs
tests/s3_compat/: ceph.rs  helpers.rs  known_failures.rs  main.rs  mint.rs
