[package]
name = "simple3"
version = "0.1.0"
edition = "2024"

[dependencies]
s3s = "0.13.0"
redb = "3.1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
md-5 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
bytes = "1"
anyhow = "1"
async-trait = "0.1"
serde_json = "1"
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio-stream = "0.1"
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
walkdir = "2"
indicatif = "0.17"
mime_guess = "2"
tempfile = "3"
rand = "0.9"
reqwest = { version = "0.12", default-features = false }
toml = "0.8"

[target.'cfg(not(windows))'.dependencies]
tikv-jemallocator = "0.6"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "storage_bench"
harness = false
