[package]
name = "simple3"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE.md"

[dependencies]
s3s = "0.13.0"
redb = "3.1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
md-5 = "0.10"
crc32c = "0.6"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
bytes = "1"
anyhow = "1"
async-trait = "0.1"
serde_json = "1"
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio-stream = "0.1"
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
walkdir = "2"
indicatif = "0.18"
mime_guess = "2"
tempfile = "3"
rand = "0.10"
reqwest = { version = "0.12", default-features = false }
toml = "1.0"
nix = { version = "0.29", default-features = false, features = ["fs"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

[target.'cfg(not(windows))'.dependencies]
tikv-jemallocator = "0.6"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
testcontainers = "0.27"

[[bench]]
name = "storage_bench"
harness = false
